--- a/app/src/main/res/layout/fragment_first.xml
+++ b/app/src/main/res/layout/fragment_first.xml
@@ -20,11 +20,29 @@
 
     </com.google.android.material.appbar.MaterialToolbar>
 
+    <ImageView
+        android:layout_marginTop="80dp"
+        android:layout_gravity="center_horizontal"
+        android:id="@+id/status_image_view"
+        android:layout_width="50dp"
+        android:layout_height="50dp"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:textColor="@color/material_dynamic_neutral70"
+        android:layout_marginTop="5dp"
+        android:textSize="19sp"
+        android:text="@string/retry"
+        android:textStyle="bold"
+        android:id="@+id/retry_button"/>
+
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:padding="5dp"/>
-
 
 </LinearLayout>
