--- a/app/src/main/res/layout/row_item_design.xml
+++ b/app/src/main/res/layout/row_item_design.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:cardCornerRadius="5dp"
     android:layout_margin="8dp"
+    app:cardCornerRadius="5dp"
     app:cardElevation="@dimen/cardview_default_elevation">
 
     <LinearLayout
@@ -17,14 +17,14 @@
             android:id="@+id/image"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:scaleType="fitXY"/>
+            android:scaleType="fitXY" />
 
         <TextView
             android:id="@+id/title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="19sp"
-            android:text="@string/title"/>
+            android:text="@string/title"
+            android:textSize="19sp" />
 
     </LinearLayout>
 
